refactor(api): modernize Spring Security 7 config
- Replace CorsGlobalConfiguration (@EnableWebMvc + WebMvcConfigurer) with a
  CorsConfigurationSource bean wired via .cors(Customizer.withDefaults()) directly
  in the SecurityFilterChain — ensures CORS headers are applied before any 4xx
  response, not after Spring MVC rejection
- Remove redundant .requestMatchers(OPTIONS).permitAll() — handled automatically
  by the CorsFilter inserted at the head of the chain
- Rewrite JwtAuthenticationConverter as a @Bean with a lambda, replacing the
  anonymous Converter class; use Stream.toList() (Java 16+)
- Remove unused HttpServletRequest parameter and jakarta.servlet import from
  MessageController; make endpoint methods public; use instanceof pattern matching
- Delete CorsGlobalConfiguration (no longer needed)
- Update MessageControllerTest @Import accordingly