@@ -2,56 +2,66 @@ package fr.liksi.formation.keycloak.resourceprovider.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.core.convert.converter.Converter;
-import org.springframework.http.HttpMethod;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
-import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Configuration
 public class OauthResourceConfiguration {
 
-	   @Bean
-	   public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-			  http
-					  .authorizeHttpRequests(auth -> auth
-							  .requestMatchers(HttpMethod.OPTIONS).permitAll()
-							  .requestMatchers("/messages/admin").hasRole("ADMIN")
-							  .requestMatchers("/messages/user").denyAll()
-							  .anyRequest().permitAll()
-					  )
-					  .oauth2ResourceServer(oauth2 -> oauth2
-							  .jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter())));
-			  return http.build();
-	   }
+    @Bean
+    public SecurityFilterChain filterChain(HttpSecurity http) {
+        http
+                .cors(Customizer.withDefaults())
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/messages/admin").hasRole("ADMIN")
+                        .requestMatchers("/messages/user").denyAll()
+                        .anyRequest().permitAll()
+                )
+                .oauth2ResourceServer(oauth2 -> oauth2
+                        .jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter())));
+        return http.build();
+    }
 
-	   public JwtAuthenticationConverter jwtAuthenticationConverter() {
-			  JwtAuthenticationConverter jwtAuthenticationConverter = new JwtAuthenticationConverter();
-			  jwtAuthenticationConverter.setJwtGrantedAuthoritiesConverter(new Converter<Jwt, Collection<GrantedAuthority>>() {
-					 @Override
-					 public Collection<GrantedAuthority> convert(Jwt source) {
-							Map<String, Object> realmsAccessClaim = source.getClaimAsMap("realm_access");
-							if (realmsAccessClaim != null) {
-								   List<String> realmsRoles = (List<String>) realmsAccessClaim.get("roles");
-								   if (realmsRoles != null) {
-										  return realmsRoles.stream()
-												  .map(role -> new SimpleGrantedAuthority(role))
-												  .collect(Collectors.toList());
-								   }
-							}
-							return Collections.emptyList();
-					 }
-			  });
-			  return jwtAuthenticationConverter;
-	   }
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOriginPatterns(List.of("*"));
+        configuration.setAllowedMethods(List.of("*"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
+    }
+
+    @Bean
+    public JwtAuthenticationConverter jwtAuthenticationConverter() {
+        JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
+        converter.setJwtGrantedAuthoritiesConverter(jwt -> {
+            Map<String, Object> realmAccess = jwt.getClaimAsMap("realm_access");
+            if (realmAccess == null) {
+                return Collections.emptyList();
+            }
+            List<String> roles = (List<String>) realmAccess.get("roles");
+            if (roles == null) {
+                return Collections.emptyList();
+            }
+            return roles.stream()
+                    .map(role -> (GrantedAuthority) new SimpleGrantedAuthority(role))
+                    .toList();
+        });
+        return converter;
+    }
 }
